GNOME Bugzilla – Bug 691151
bluetooth switch doesn't work in Power panel
Last modified: 2013-12-06 11:04:12 UTC
I built gnome-control-center from jhbuild an hour ago. I'm using Ubuntu with glib 2.35.3, GTK 3.7.2, and bluez 4.101 Enabling and disabling Bluetooth from the Power panel doesn't work, but it works in the Bluetooth panel. (gnome-control-center:15603): GLib-CRITICAL **: `sv' is not a valid GVariant format string (gnome-control-center:15603): GLib-CRITICAL **: g_variant_new: assertion `valid_format_string (format_string, TRUE, NULL) && format_string[0] != '?' && format_string[0] != '@' && format_string[0] != '*' && format_string[0] != 'r'' failed
Created attachment 232808 [details] [review] Try to fix bluetooth handling We need to ensure that bluetoothd is activated, otherwise the default adapter might not be present. Unfortunately, this is not enough to make the switch actually have the same effect as the shell menuitem.
Adding the parentheses to sv fixes the format_string error, but the rest of the patch doesn't seem to make much of a difference (the Bluetooth switch still doesn't work).
depends on how you define 'works'. It does succeed in changing the 'Powered' property of the default adapter. What effect that has on the actual hw, I don't know.
Attachment 232808 [details] pushed as 1d68105 - Try to fix bluetooth handling
(In reply to comment #3) > depends on how you define 'works'. It does succeed in changing the 'Powered' > property of the default adapter. What effect that has on the actual hw, I don't > know. By "works" I mean the Bluetooth toggle in Power seems to have zero effect on the Bluetooth toggle in Bluetooth or the Bluetooth toggle in GNOME Shell's top bar (or vice versa, turning Bluetooth on or off in those other two places has no effect on the Bluetooth switch in Power). Therefore, I don't think this bug should be marked "fixed" yet.
I think Jasper moved the BT switch functionality to g-s-d now, right?
(In reply to comment #6) > I think Jasper moved the BT switch functionality to g-s-d now, right? Nope, only the airplane mode functionality was moved, but moving the code to g-s-d is probably a good idea so that we don't need to replicate it in gnome-control-center and gnome-shell.
*** Bug 691730 has been marked as a duplicate of this bug. ***
Created attachment 263044 [details] [review] power: Use g-s-d's rfkill for Bluetooth
Attachment 263044 [details] pushed as f020b73 - power: Use g-s-d's rfkill for Bluetooth