Try to fix bluetooth handling

We need to ensure that bluetoothd is activated, otherwise the
default adapter might not be present. Unfortunately, this is
not enough to make the switch actually have the same effect
as the shell menuitem.

https://bugzilla.gnome.org/show_bug.cgi?id=691151